feat(login): add github authentication

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ GOOGLE_CLIENT_ID=226762228420-7mdn7h0qsu1cta63ao8hnov0rfn33cvf.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_URL=http://localhost:3000
 JWT_SECRET=68a2d0612ceb224b6bfeb7d60bc9080d
+GITHUB_ID=de320eca582bf14b0289
+GITHUB_SECRET=af813484ad28c3c2a4123b66178e235d19287038
